# classic_chinese_translate

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/classic_chinese_translate/: __init__.py  bpe.py  cli.py  config.py  tokenizer.py  translator.py
