[project]
name = "classic-chinese-translate"
version = "0.1.0"
description = "Classical Chinese translation engine using fairseq transformer models"
requires-python = ">=3.9,<3.10"
dependencies = [
    "torch>=1.9.0,<2.0",
    "numpy<1.24",
    "jieba",
    "python-Levenshtein",
    "cffi",
    "tqdm",
    "sacrebleu",
]

[tool.hatch.build.targets.wheel]
packages = ["src/classic_chinese_translate"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
cct = "classic_chinese_translate.cli:main"
